--- a/dashboard.html
+++ b/dashboard.html
@@ -35,7 +35,7 @@
           <a href="#">Request Documents</a>
           <a href="#">Report a Concern</a>
           <a href="#">Announcements</a>
-          <a href="#">My Household</a>
+          <a href="#">Community Feed</a>
           <a href="#">My Requests</a>
           <a href="#">Settings</a>
         </nav>
