--- a/dashboardstaff.html
+++ b/dashboardstaff.html
@@ -24,6 +24,7 @@
           <a href="#" class="active">Dashboard</a>
           <a href="#">Manage Requests</a>
           <a href="#">Concerns & Reports</a>
+          <a href="#">Community Feed</a>
           <a href="#">Announcements</a>
           <a href="#">Residents List</a>
           <a href="#">Household Records</a>
